[gd_scene load_steps=7 format=2]

[ext_resource path="res://runfont.tres" type="DynamicFontData" id=1]
[ext_resource path="res://assets/Soliloquy.ogg" type="AudioStream" id=2]
[ext_resource path="res://assets/textures/bg.png" type="Texture" id=3]
[ext_resource path="res://scripts/MainScene.gd" type="Script" id=4]

[sub_resource type="DynamicFont" id=1]
size = 50
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
size = 50
font_data = ExtResource( 1 )

[node name="MainScene" type="Node2D"]
script = ExtResource( 4 )

[node name="TextureRect" type="TextureRect" parent="."]
margin_right = 1024.0
margin_bottom = 600.0
texture = ExtResource( 3 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GameNameLabel" type="Label" parent="."]
margin_left = 349.0
margin_top = 100.0
margin_right = 649.0
margin_bottom = 160.0
custom_fonts/font = SubResource( 1 )
text = "Tic Tac Toe"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PlayButton" type="Button" parent="."]
margin_left = 350.0
margin_top = 250.0
margin_right = 650.0
margin_bottom = 360.0
custom_fonts/font = SubResource( 2 )
text = "Play!"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GameDevLabel" type="Label" parent="."]
margin_right = 40.0
margin_bottom = 14.0
text = "Retarded Games"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 2 )
volume_db = -11.612
pitch_scale = 1.93

[node name="SettingsButton" type="Button" parent="."]
margin_left = 950.0
margin_top = 570.0
margin_right = 1013.0
margin_bottom = 590.0
text = "Settings"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SoundCheckBox" type="CheckBox" parent="."]
margin_left = 10.0
margin_top = 560.0
margin_right = 83.0
margin_bottom = 584.0
pressed = true
text = "Sound?"
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="PlayButton" to="." method="_on_PlayButton_pressed"]
[connection signal="pressed" from="SettingsButton" to="." method="_on_SettingsButton_pressed"]
[connection signal="pressed" from="SoundCheckBox" to="." method="_on_SoundCheckBox_pressed"]
